# tonal-cpp

./: .gitignore  CMakeLists.txt  README.md  pitch.doc.md
examples/: chord_detector.cpp  pitch_example.cpp
examples/chord_autocomplete/: CMakeLists.txt  chord_autocomplete.cpp  chord_autocomplete.h  demo.cpp  main.cpp
include/tonalcpp/: chord.h  chord_detect.h  chord_type.h  collection.h  helpers.h  interval.h  midi.h  note.h  pcset.h  pitch.h  pitch_distance.h  pitch_interval.h  pitch_note.h  range.h  scale.h  scale_type.h  voice_leading.h  voicing.h  voicing_dictionary.h
src/: chord.cpp  chord_detect.cpp  chord_type.cpp  collection.cpp  helpers.cpp  interval.cpp  midi.cpp  note.cpp  pcset.cpp  pitch.cpp  pitch_distance.cpp  pitch_interval.cpp  pitch_note.cpp  range.cpp  scale.cpp  scale_type.cpp  voice_leading.cpp  voicing.cpp  voicing_dictionary.cpp
test/: test_chord.cpp  test_chord_detect.cpp  test_chord_type.cpp  test_collection.cpp  test_helpers.cpp  test_helpers.h  test_interval.cpp  test_main.cpp  test_midi.cpp  test_note.cpp  test_pcset.cpp  test_pitch.cpp  test_pitch_distance.cpp  test_pitch_interval.cpp  test_pitch_note.cpp  test_range.cpp  test_scale.cpp  test_scale_type.cpp  test_voice_leading.cpp  test_voicing.cpp  test_voicing_dictionary.cpp
